--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"start": "node server.js"
 	},
 	"repository": {
+		"author": "alohapeakina",
 		"type": "git",
 		"url": "https://idontknow/todo.git"
 	}
